--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   "dependencies": {
     "babel-core": "^5.5.6",
     "babel-loader": "^5.1.4",
+    "glob": "^5.0.10",
     "gulp-util": "^3.0.5",
     "merge2": "^0.3.5",
     "node-libs-browser": "^0.5.2",
