--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "babel-core": "^5.5.6",
     "babel-loader": "^5.1.4",
     "glob": "^5.0.10",
+    "gulp-sourcemaps": "^1.5.2",
     "gulp-util": "^3.0.5",
     "merge2": "^0.3.5",
     "node-libs-browser": "^0.5.2",
