--- a/.eslintrc
+++ b/.eslintrc
@@ -85,7 +85,7 @@
 		"no-void": 2,
 		"no-warning-comments": [0, {"terms": ["todo"], "location": "anywhere"}],
 		"no-with": 2,
-		"wrap-iife": 2,
+		"wrap-iife": [2, "inside"],
 		"yoda": 2,
 		"strict": 2,
 
@@ -97,12 +97,12 @@
 		"no-shadow-restricted-names": 2,
 		"no-undef": 2,
 		"no-undef-init": 2,
-		"no-undefined": 2,
+		"no-undefined": 0,
 		"no-unused-vars": [2, {"vars": "all", "args": "after-used"}],
 		"no-use-before-define": 2,
 
 		// Stylistic Issues
-		"indent": [2, "tab", {"indentSwitchCase": false}],
+		"indent": [2, "tab", {"SwitchCase": 1}],
 		"brace-style": [2, "1tbs"],
 		"camelcase": 2,
 		"comma-spacing": [2, {"before": false, "after": true}],
