--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "karma-jasmine": "^0.3.6",
     "karma-phantomjs-launcher": "^0.2.0",
     "phantomjs": "^1.9.17",
+    "source-map-loader": "^0.1.5",
     "typescript": "^1.5.3"
   },
   "dependencies": {
